# fco-backend

./: fco-backend.cabal  stack.yaml
app/: Main.hs
database/postgres/: drop_tables.sql  init.sql  testinit.sql
src/Fco/: Backend.hs
src/Fco/Backend/: Actor.hs  Database.hs  Demo.hs  Service.hs  Types.hs
test/Fco/: BackendSpec.hs
test/Fco/Backend/: DatabaseSpec.hs
