name:                 fco-backend
version:              0.1.0.0
synopsis:             fco backend modules, providing persistence and a native Haskell API
description:          Please see README.md
homepage:             http://github.com/cyberconcepts/fco-backend
license:              BSD3
license-file:         LICENSE
author:               functionalconcepts.org team
maintainer:           team@functionalconcepts.org
copyright:            Copyright 2017 functionalconcepts.org team
category:             Semantic Web
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Fco.Backend
                    , Fco.Backend.Database
                    , Fco.Backend.Service
                    , Fco.Backend.Types
  build-depends:      base >= 4.7 && < 5
                    , basic-prelude
                    , binary
                    , containers
                    , distributed-process
                    , text
                    -- , postgresql-simple
                    -- , hasql
                    , HDBC
                    , HDBC-postgresql
                    -- , configurator  -- or: ConfigFile, app-settings
                    -- , mtl
                    -- , recursion-schemes
                    , fco-core
  default-language:   Haskell2010

-- executable fco-backend
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , fco-backend
--   default-language:    Haskell2010

test-suite fco-backend-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  other-modules:      Fco.BackendSpec
                    , Fco.Backend.DatabaseSpec
  main-is:            Spec.hs
  build-depends:      base
                    , basic-prelude
                    , containers
                    , text
                    , HDBC
                    , fco-backend
                    , fco-core
                    , hspec
                    -- , tasty, tasty-hspec
                    , QuickCheck
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cyberconcepts/fco-backend
